--- a/universal_f_widgets/pubspec.yaml
+++ b/universal_f_widgets/pubspec.yaml
@@ -7,8 +7,16 @@ environment:
   sdk: '>=3.3.4 <4.0.0'
 
 dependencies:
+  cached_network_image: ^3.3.1
   flutter:
     sdk: flutter
+  flutter_swiper_plus: ^2.0.4
+  google_places_flutter: ^2.0.9
+  http: ^1.2.2
+  intl_phone_field: ^3.2.0
+  provider: ^6.1.2
+  shared_preferences: ^2.2.3
+  syncfusion_flutter_datepicker: ^26.1.41
 
 dev_dependencies:
   flutter_test:
@@ -17,3 +25,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
