--- a/universal_f_widgets/pubspec.yaml
+++ b/universal_f_widgets/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   google_places_flutter: ^2.0.9
   http: ^1.2.2
   intl_phone_field: ^3.2.0
+  pin_code_fields: ^8.0.1
   provider: ^6.1.2
   shared_preferences: ^2.2.3
   syncfusion_flutter_datepicker: ^26.1.41
