--- a/universal_f_widgets/pubspec.yaml
+++ b/universal_f_widgets/pubspec.yaml
@@ -8,11 +8,13 @@ environment:
 
 dependencies:
   cached_network_image: ^3.3.1
+  cloud_firestore: ^4.14.0
   flutter:
     sdk: flutter
   flutter_swiper_plus: ^2.0.4
   google_places_flutter: ^2.0.9
   http: ^1.2.2
+  image_picker: ^1.1.2
   intl_phone_field: ^3.2.0
   pin_code_fields: ^8.0.1
   provider: ^6.1.2
