--- a/universal_f_widgets/pubspec.yaml
+++ b/universal_f_widgets/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   http: ^1.2.2
   image_picker: ^1.1.2
   intl_phone_field: ^3.2.0
+  mime: ^1.0.5
   pin_code_fields: ^8.0.1
   provider: ^6.1.2
   shared_preferences: ^2.2.3
